--- a/views/pug/index.pug
+++ b/views/pug/index.pug
@@ -9,7 +9,7 @@ html
   body
     h1.border.center FCC Advanced Node and Express
     h2.center#pug-success-message
-    | Looks like this page is being rendered from Pug into HTML! Kate's custom message here: hey.
+    | Looks like this page is being rendered from Pug into HTML! Kate's custom message here: Salut,
     | #{title}
     p#pug-variable=message
     
